==> JoseAvalos/API_lib/AD9854/AD9854.cpp <==
#include "AD9854.h"
#include <Energia.h>
#include <SPI.h>

int DDS::init()
{

    _ctrlreg_multiplier = 1;        	// Multiplier 4- 20
    _ctrlreg_mode = 1;              	// Single, FSK, Ramped FSK, Chirp, BPSK
    
    _ctrlreg_qdac_pwdn = 0;         	// QDAC power down enabled: 0 -> disable
    _ctrlreg_ioupdclk = 0;          	// IO Update clock direction: 0 -> input,  1 -> output
    _ctrlreg_inv_sinc  = 0;         	// Sinc inverser filter enable: 0 -> enable
    _ctrlreg_osk_en = 1;            	// Enable Amplitude multiplier: 0 -> disabled
    _ctrlreg_osk_int = 0;           	// register/counter output shaped control: 0 -> register, 1 -> counter
    _ctrlreg_msb_lsb = 0;           	// msb/lsb bit first: 0 -> MSB, 1 -> LSB
    _ctrlreg_sdo = 1;               	//     
     
    
    reset();
   

    if (not writeControlRegister())
    {
      	_isConfig = false;
        return false;
    }

    _isConfig = true;

    return true;

}

int DDS::defaultSettings()
{

    wrMultiplier(4, _clock);
    reset();

    wrFrequency1(freq2binary(49920000));
    wrFrequency2(freq2binary(10000000));

    wrAmplitudeI(0.0);              
    wrAmplitudeQ(0.0);

    wrPhase1(180);                       
    wrPhase2(180);
                              
    return writeControlRegister();
}

int DDS::reset()
{
	on(_dds_mreset);
	delay(1);
	off(_dds_mreset);
	delay(1);
    _rf_enabled=false;
	return 1;
}

char* DDS::readData(char addr, char ndata)
{
    // I/O reset
    io_reset();

    off(_dds_cs);

    //Sending serial address
    SPI.transfer((addr & 0x0F) | 0x80);
    for(char i = 0; i < ndata; i++)
    {
        delayMicroseconds(_spi_delay);
        read_spi_data[i] =SPI.transfer(0x00);
    }
    
   	on(_dds_cs);
    
    return read_spi_data;
    
}

int DDS::writeData(char addr, char ndata, const char* data){

    off(_dds_udclk);
   	io_reset();
	off(_dds_cs);

    SPI.transfer(addr & 0x0F);

    for(char i = 0; i < ndata; i++)
    {
        delayMicroseconds(_spi_delay);
        SPI.transfer(data[i]);
    }

    on(_dds_cs);
    delayMicroseconds(10);
    on(_dds_udclk);
    delayMicroseconds(10);
    off(_dds_udclk);
    delayMicroseconds(10);
	
    return 1;
}

int DDS::writeDataAndVerify(char addr, char ndata, const char* wr_spi_data ){
	
    int    success;
    char*  rd_spi_data;
	
    writeData(addr, ndata, wr_spi_data);
    rd_spi_data = readData(addr, ndata);
	
    success = 1;
	
    for(char i = 0; i < ndata; i++)
    {
        if (wr_spi_data[i] != rd_spi_data[i])
        {
            success = 0;
            break;
        }
		
    }

	//Update Control Register
    if ((success == 1) && (addr==0x07)){
        _ctrlreg_multiplier = rd_spi_data[1] & 0x1F;
        _ctrlreg_mode = (rd_spi_data[2] & 0x0E) >> 1;
    }
	
	return success;
}

int DDS::writeControlRegister(){
	
    bool success;
    char* write_spi_data;
    char* read_spi_data;
    char addr = 0x07, ndata = 4;
	
    write_spi_data = getControlRegister();
	
    success = writeData(addr, ndata, write_spi_data);
   
    //dds_updclk->output();
	
    delayMicroseconds(100);
    on(_dds_udclk);
    delayMicroseconds(10);
    off(_dds_udclk);
    delayMicroseconds(10);
	
    read_spi_data = readData(addr, ndata);
	
    success = true;
	
    for(char i = 0; i < ndata; i++)
    {
        if (write_spi_data[i] != read_spi_data[i])
        {
            success = false;
            break;
        }
    }
	
    return success;
}

char* DDS::getControlRegister()
{
    
    bool pll_range = 0;
    bool pll_bypass = 1;
    
    if (_ctrlreg_multiplier >= 4 && _ctrlreg_multiplier<=12){
        pll_bypass = 0;
    }
 
    if (_clock >= 200){
        pll_range = 1;
    }
       
    controlRegister[0] = 0x10 + _ctrlreg_qdac_pwdn*4;
    controlRegister[1] = pll_range*64 + pll_bypass*32 + (_ctrlreg_multiplier & 0x1F);
    controlRegister[2] = (_ctrlreg_mode & 0x07)*2 + _ctrlreg_ioupdclk;
    controlRegister[3] = _ctrlreg_inv_sinc*64 + _ctrlreg_osk_en*32 + _ctrlreg_osk_int*16 + _ctrlreg_msb_lsb*2 + _ctrlreg_sdo;
    
    return controlRegister;     
    
}

int DDS::rdMode()
{
	
    char* rd_data;
    int rd_mode;
    char mode;
	
    rd_data = readData(0x07, 4);
    mode = (rd_data[2] & 0x0E) >> 1;
    rd_mode = int(mode);
	
    return rd_mode;
}

char* DDS::rdMultiplier()
{
	
    char* rd_data;
    char* rd_multiplier;
    char mult;
	
    rd_data = readData(0x07, 4);
    mult = (rd_data[1] & 0x1F);
    rd_multiplier[0]=mult;
    
    return rd_multiplier;    
}

int DDS::wrMode(char mode)
{
	
    _ctrlreg_mode= mode & 0x07;
	
    return writeControlRegister();
}

int DDS::wrMultiplier(char multiplier, float clock)
{
    _ctrlreg_multiplier = multiplier & 0x1F;
    _clock = clock;
    return writeControlRegister();
}

int DDS::wrPhase1(float phase)
{
    float phase1 = phase*16383/359; 

    _phase1[0] = byte(int(phase1/256));
    _phase1[1] = byte(int(phase1 - _phase1[0]*256));

    return writeDataAndVerify(0x00, 2, _phase1);
}

int DDS::wrPhase2(float phase)
{
    float phase2 = phase*16383/359; 

    _phase2[0] = byte(int(phase2/256));
    _phase2[1] = byte(int(phase2 - _phase2[0]*256));

    return writeDataAndVerify(0x01, 2, _phase2);
}

int DDS::wrFrequency1(char* freq)
{

    int sts;
    sts =  writeDataAndVerify(0x02, 6, freq);
	
	if (sts){
        for (int i=0; i<6; i++)
            _frequency1[i] = freq[i];
    }

    return sts;
}

int DDS::wrFrequency2(char* freq)
{

    int sts;
    sts = writeDataAndVerify(0x03, 6, freq);
	
	if (sts){
        for (int i=0; i<6; i++)
            _frequency2[i] = freq[i];
    }

    return sts;
}

int DDS::wrAmplitudeI(float amplitude)
{
	int amplitudeI = amplitude*4095; 

    _amplitudeI[0] = byte(int(amplitudeI/256));
    _amplitudeI[1] = byte(int(amplitudeI - _amplitudeI[0]*256));
	
    _rf_enabled = true;
	
    return writeDataAndVerify(0x08, 2, _amplitudeI);
}

int DDS::wrAmplitudeQ(float amplitude)
{
    int amplitudeQ = amplitude*4095;
	
    _amplitudeQ[0] = byte(int(amplitudeQ/256));
    _amplitudeQ[1] = byte(int(amplitudeQ - _amplitudeQ[0]*256));
	 
    _rf_enabled = true;
	
    return writeDataAndVerify(0x09, 2, _amplitudeQ);
}

int DDS::enableRF()
{
	
    _rf_enabled = true;
    writeDataAndVerify(0x08, 2, _amplitudeI);

    return writeDataAndVerify(0x09, 2, _amplitudeQ);
}

int DDS::disableRF()
{
    
    _rf_enabled = false;
    writeDataAndVerify(0x08, 2, "\x00\x00");

    return writeDataAndVerify(0x09, 2, "\x00\x00");
	
}

double DDS::getFreqFactor1()
{

    _factor_freq1 = ((double)_frequency1[0])/256.0 + ((double)_frequency1[1])/65536.0  + ((double)_frequency1[2])/16777216.0 + ((double)_frequency1[3])/4294967296.0;
    _factor_freq1 *= ((double)_ctrlreg_multiplier);
    
    return _factor_freq1;
}

double DDS::getFreqFactor2(){
    _factor_freq2 = ((double)_frequency2[0])/256.0 + ((double)_frequency2[1])/65536.0  + ((double)_frequency2[2])/16777216.0 + ((double)_frequency2[3])/4294967296.0;
    _factor_freq2 *= ((double)_ctrlreg_multiplier);
    
    return _factor_freq2;
}
